# aoc

./: CMakeLists.txt  README.md
2022/solutions/: solution01-1.cpp  solution01.cpp  solution02.cpp  solution03.cpp  solution04.cpp  solution05.cpp  solution06.cpp  solution07.cpp  solution08.cpp
