cmake_minimum_required(VERSION 3.24)
project(aoc)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day01 2022/solutions/solution01.cpp)
add_executable(Day02 2022/solutions/solution02.cpp)
add_executable(Day03 2022/solutions/solution03.cpp)
add_executable(Day04 2022/solutions/solution04.cpp)
add_executable(Day05 2022/solutions/solution05.cpp)
add_executable(Day06 2022/solutions/solution06.cpp)
add_executable(Day07 2022/solutions/solution01.cpp)
add_executable(Day08 2022/solutions/solution01.cpp)
add_executable(Day09 2022/solutions/solution01.cpp)
add_executable(Day10 2022/solutions/solution01.cpp)
add_executable(Day11 2022/solutions/solution01.cpp)
add_executable(Day12 2022/solutions/solution01.cpp)
add_executable(Day13 2022/solutions/solution01.cpp)
add_executable(Day14 2022/solutions/solution01.cpp)
add_executable(Day15 2022/solutions/solution01.cpp)
add_executable(Day16 2022/solutions/solution01.cpp)
add_executable(Day17 2022/solutions/solution01.cpp)
add_executable(Day18 2022/solutions/solution01.cpp)
add_executable(Day19 2022/solutions/solution01.cpp)
add_executable(Day20 2022/solutions/solution01.cpp)
add_executable(Day21 2022/solutions/solution01.cpp)
add_executable(Day22 2022/solutions/solution01.cpp)
add_executable(Day23 2022/solutions/solution01.cpp)
add_executable(Day24 2022/solutions/solution01.cpp)